styles/widgets/_widget.scss
.widget {
  display: inline-block;
  position: relative;
  min-width: 100px;
  min-height: 100px;
  width: 100%;
  margin: 10px 0;
  border-radius: 10px;
  background-color: $dark-20;
  backdrop-filter: blur(10px);
  box-shadow: 0 3px 5px $dark-10;
  color: $light-100;
  a {
    color: inherit;
  }
  // Ensure that widget settings are never clipped by a manually-set height
  &.widget-settings-open {
    resize: none !important;
    height: auto !important;
  }
}
.widget-contents {
  position: relative;
  min-width: inherit;
  min-height: inherit;
  border-radius: inherit;
  padding: 20px;
  overflow: hidden;
}

.widget-controls {
  position: absolute;
  $control-spacing-x: 4px;
  $control-spacing-y: $control-spacing-x;
  top: $control-spacing-y;
  z-index: 100;
  display: flex;
  flex-direction: column;
  &-left {
    left: $control-spacing-x;
  }
  &-right {
    right: $control-spacing-x;
  }
}

.widget-control {
  // Disable text selection of these controls
  user-select: none;
  $control-size: 24px;
  width: $control-size;
  height: $control-size;
  padding: 0;
  margin-bottom: 10px;
  border-width: 0;
  box-sizing: content-box;
  background: none !important;
  opacity: 0.5;
  transition: opacity 250ms ease-in-out;
  &:last-of-type {
    margin-bottom: 0;
  }
  @include layout(tablet) {
    margin-bottom: 5px;
  }
  @include layout(desktop) {
    $control-size: 20px;
    width: $control-size;
    height: $control-size;
  }
  .is-not-touch-device .widget:not(:hover) & {
    opacity: 0;
  }
  .is-not-touch-device &:hover {
    opacity: 0.5 !important;
  }
  .is-not-touch-device &:active {
    opacity: 1 !important;
  }
}
.widget-control-icon {
  width: 100%;
  height: 100%;
}

.widget-drag-handle {
  $control-size: 24px;
  width: $control-size;
  height: $control-size;
  position: relative;
  margin-bottom: 0;
  cursor: grab;
  &:active {
    cursor: grabbing;
  }
}

// Increase click area of drag control (for easier dragging)
.widget-controls-left {
  $drag-control-padding: 5px;
  transform: translate(-$drag-control-padding, -$drag-control-padding);
  .widget-drag-handle {
    padding-top: $drag-control-padding;
    padding-left: $drag-control-padding;
  }
}

.widget-settings-open:hover .widget-settings-toggle {
  opacity: 1;
  visibility: visible;
}

.loading-indicator-blocking-container .loading-indicator {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

